--- a/Css/style.css
+++ b/Css/style.css
@@ -33,11 +33,14 @@ body{
 }
 
 .image{
+    
     background-image: url("/images/illustration.svg");
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center;
     /* border: 2px solid; */
     height: 65%;
+     
 }
 
 .text{
@@ -69,7 +72,7 @@ form{
 
 form div input{
     width: 100%;
-    height: 50px;
+    height: 40px;
     border: 2px solid #c4c4c4;
     border-radius: 8px;
     outline: none;
@@ -219,8 +222,8 @@ span{
         flex-direction: column;
     }
 
-    .height{
-
+    .image{
+    
         height: 70vh;
     }
 }
@@ -231,5 +234,6 @@ span{
 
         padding: 20px;
     }
+
     
 }
